--- a/src/main/resources/snowdust.mixins.json
+++ b/src/main/resources/snowdust.mixins.json
@@ -1,12 +1,12 @@
 {
   "required": true,
   "minVersion": "0.8",
-  "package": "net.fabricmc.example.mixin",
+  "package": "com.rpersival.snowdust.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
   ],
   "client": [
-    "ExampleMixin"
+    "DustOfSnowMixin"
   ],
   "injectors": {
     "defaultRequire": 1
