Add TitleScreenAccessor.java and TitleScreenMixin.java

--- a/src/main/resources/snowdust.mixins.json
+++ b/src/main/resources/snowdust.mixins.json
@@ -3,11 +3,12 @@
   "minVersion": "0.8",
   "package": "com.rpersival.snowdust.mixin",
   "compatibilityLevel": "JAVA_17",
-  "mixins": [
-  ],
+  "mixins": [],
   "client": [
-    "DustOfSnowMixin"
+    "TitleScreenMixin",
+    "TitleScreenAccessor"
   ],
+  "server": [],
   "injectors": {
     "defaultRequire": 1
   }
