--- a/src/main/resources/snowdust.mixins.json
+++ b/src/main/resources/snowdust.mixins.json
@@ -3,10 +3,12 @@
   "minVersion": "0.8",
   "package": "com.rpersival.snowdust.mixin",
   "compatibilityLevel": "JAVA_17",
-  "mixins": [],
+  "mixins": [
+    "StructureFeatureAccessor"
+  ],
   "client": [
-    "TitleScreenMixin",
-    "TitleScreenAccessor"
+    "TitleScreenAccessor",
+    "TitleScreenMixin"
   ],
   "server": [],
   "injectors": {
