Add ice drops and LootTableInjection.java

--- a/src/main/resources/snowdust.mixins.json
+++ b/src/main/resources/snowdust.mixins.json
@@ -4,6 +4,7 @@
   "package": "com.rpersival.snowdust.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
+    "IceBlockMixin",
     "StructureFeatureAccessor"
   ],
   "client": [
