--- a/src/main/resources/snowdust.mixins.json
+++ b/src/main/resources/snowdust.mixins.json
@@ -4,11 +4,17 @@
   "package": "com.rpersival.snowdust.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
+    "CameraSubmersionTypeMixin",
     "DamageEnchantmentMixin",
     "IceBlockMixin",
+    "PlayerEntityMixin",
     "StructureFeatureAccessor"
   ],
   "client": [
+    "BackgroundRendererAccessor",
+    "BackgroundRendererMixin",
+    "CameraAccessor",
+    "CameraMixin",
     "TitleScreenAccessor",
     "TitleScreenMixin"
   ],
