Fix minor issues Quick Sand now drops Sand when broken while falling. The player takes suffocating damage only when submerged in Quick Sand

--- a/src/main/resources/snowdust.mixins.json
+++ b/src/main/resources/snowdust.mixins.json
@@ -6,6 +6,7 @@
   "mixins": [
     "CameraSubmersionTypeMixin",
     "DamageEnchantmentMixin",
+    "FallingBlockEntityMixin",
     "IceBlockMixin",
     "PlayerEntityMixin",
     "StructureFeatureAccessor"
